Use the rev precached on Appveyor

--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,5 +1,6 @@
 
-FROM microsoft/windowsservercore:1607 as build
+FROM microsoft/windowsservercore@sha256:c06b4bfaf634215ea194e6005450740f3a230b27c510cf8facab1e9c678f3a99 as build
+
 
 SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 
