Auto tag and push cache image.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,24 +13,24 @@ environment:
     secure: 5jWYD10eY+CLicPtEtSMng==
   FRAMEWORK: netcoreapp2.2
   matrix:
-    # - RUNTIME: noruntime
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: win-x64    
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: linux-x64
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: osx-x64
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: win-x86
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: win-arm
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: linux-arm
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    # - RUNTIME: docker
-    #   DOCKERPLATFORM: linux-amd64
-    #   DOCKERFILE: linux
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
+    - RUNTIME: noruntime
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: win-x64    
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: linux-x64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: osx-x64
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: win-x86
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: win-arm
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: linux-arm
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: docker
+      DOCKERPLATFORM: linux-amd64
+      DOCKERFILE: linux
+      APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
     - RUNTIME: docker
       DOCKERPLATFORM: windows-amd64
       DOCKERFILE: windows
@@ -75,7 +75,8 @@ build_script:
  - ps: |
     if ($env:RUNTIME -eq "docker") {
       docker pull rnwood/smtp4dev:appveyorcache
-      docker build --cache-from rnwood/smtp4dev:appveyorcache -m 4g -t rnwood/smtp4dev:$($env:DOCKERPLATFORM)-v3 -f Dockerfile.$($env:DOCKERFILE) --build-arg version=$env:APPVEYOR_BUILD_VERSION .
+      docker build --target build --cache-from rnwood/smtp4dev:appveyorcache -m 4g -t rnwood/smtp4dev:appveyorcache -f Dockerfile.$($env:DOCKERFILE) --build-arg version=$env:APPVEYOR_BUILD_VERSION .
+      docker build  -m 4g -t rnwood/smtp4dev:$($env:DOCKERPLATFORM)-v3 -f Dockerfile.$($env:DOCKERFILE) --build-arg version=$env:APPVEYOR_BUILD_VERSION .
       docker tag rnwood/smtp4dev:$($env:DOCKERPLATFORM)-v3 rnwood/smtp4dev:$($env:DOCKERPLATFORM)-$($env:APPVEYOR_BUILD_VERSION)
 
     } else {
@@ -96,6 +97,7 @@ before_deploy:
  - ps: |
     if ($env:RUNTIME -eq "docker") {
         "$env:DOCKERPASSWORD" | docker login -u "$env:DOCKERUSERNAME" --password-stdin
+        docker push rnwood/smtp4dev:appveyorcache
         docker push rnwood/smtp4dev:$($env:DOCKERPLATFORM)-v3
         docker push rnwood/smtp4dev:$($env:DOCKERPLATFORM)-$($env:APPVEYOR_BUILD_VERSION)
     }
