--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,20 +13,20 @@ environment:
     secure: 5jWYD10eY+CLicPtEtSMng==
   FRAMEWORK: netcoreapp2.2
   matrix:
-    - RUNTIME: noruntime
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - RUNTIME: win-x64    
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - RUNTIME: linux-x64
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - RUNTIME: osx-x64
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - RUNTIME: win-x86
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - RUNTIME: win-arm
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - RUNTIME: linux-arm
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: noruntime
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: win-x64    
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: linux-x64
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: osx-x64
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: win-x86
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: win-arm
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #- RUNTIME: linux-arm
+    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     - RUNTIME: docker
       DOCKERPLATFORM: linux-amd64
       DOCKERFILE: linux
