--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -1,66 +1,12 @@
-
-FROM microsoft/windowsservercore@sha256:c06b4bfaf634215ea194e6005450740f3a230b27c510cf8facab1e9c678f3a99 as build
-# This is a 1607 image which is available on the Appveyor agents
-
-SHELL ["powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
-
-ENV NODE_VERSION 10.11.0
-
-RUN Invoke-WebRequest $('https://nodejs.org/dist/v{0}/node-v{0}-win-x64.zip' -f $env:NODE_VERSION) -OutFile 'node.zip' -UseBasicParsing ; \
-Expand-Archive node.zip -DestinationPath C:\ ;\
-Rename-Item -Path $('C:\node-v{0}-win-x64' -f $env:NODE_VERSION) -NewName 'C:\nodejs'
-
-RUN $env:PATH = 'C:\nodejs;{0}' -f $env:PATH ; \
-[Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine)
-
-ENV DOTNET_SDK_VERSION 2.2.104
-
-RUN Invoke-WebRequest -OutFile dotnet.zip https://dotnetcli.blob.core.windows.net/dotnet/Sdk/$Env:DOTNET_SDK_VERSION/dotnet-sdk-$Env:DOTNET_SDK_VERSION-win-x64.zip; \
-Expand-Archive dotnet.zip -DestinationPath c:\sdk; \
-Remove-Item -Force dotnet.zip
-
-ENV ASPNETCORE_VERSION 2.2.3
-RUN Invoke-WebRequest -OutFile aspnetcore.zip https://dotnetcli.blob.core.windows.net/dotnet/aspnetcore/Runtime/$Env:ASPNETCORE_VERSION/aspnetcore-runtime-$Env:ASPNETCORE_VERSION-win-x64.zip; \
-Expand-Archive aspnetcore.zip -DestinationPath c:\dotnet; \
-Remove-Item -Force aspnetcore.zip
-
-RUN $env:PATH = $('c:\sdk;{0}' -f $env:PATH) ;\
-[Environment]::SetEnvironmentVariable('PATH', $env:PATH, [EnvironmentVariableTarget]::Machine)
-
-ENV DOTNET_SKIP_FIRST_TIME_EXPERIENCE true
-
-WORKDIR /app
-
-# copy csproj and restore as distinct layers
-COPY *.sln .
-COPY Rnwood.Smtp4dev/*.csproj ./Rnwood.Smtp4dev/
-RUN dotnet restore Rnwood.Smtp4dev
-
-COPY Rnwood.Smtp4dev/npm-shrinkwrap.json ./Rnwood.Smtp4dev/
-COPY Rnwood.Smtp4dev/package.json ./Rnwood.Smtp4dev/
-WORKDIR /app/Rnwood.Smtp4dev
-RUN npm install
-
-# copy everything else and build app
-
-WORKDIR /app
-ARG version
-ENV VERSION $version
-COPY . .
-WORKDIR /app/Rnwood.Smtp4dev
-RUN dotnet build -p:Version=$env:VERSION ; \
-dotnet publish -c Release -o out -p:Version=$env:VERSION
-
 FROM microsoft/nanoserver@sha256:8f78a4a7da4464973a5cd239732626141aec97e69ba3e4023357628630bc1ee2 as runtime
 # This is a 1607 image which is available on the Appveyor agents
 EXPOSE 80
 EXPOSE 25
-COPY --from=build /dotnet /dotnet
 
-COPY --from=build /app/Rnwood.Smtp4dev/out /app
+COPY Rnwood.Smtp4dev/out
 
 ENV ASPNETCORE_URLS=http://+:80 \
 DOTNET_RUNNING_IN_CONTAINER=true
 
-WORKDIR /dotnet
-ENTRYPOINT ["dotnet", "/app/Rnwood.Smtp4dev.dll"]
+WORKDIR /app
+ENTRYPOINT ["Rnwood.Smtp4dev"]
