--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,12 +28,12 @@ environment:
     #- RUNTIME: linux-arm
     #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     - RUNTIME: docker
-      DOTNETFRAMEWORK: linux-x64
+      DOTNETRUNTIME: linux-x64
       DOCKERPLATFORM: linux-amd64
       DOCKERFILE: linux
       APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
     - RUNTIME: docker
-      DOTNETFRAMEWORK: win-x64
+      DOTNETRUNTIME: win-x64
       DOCKERPLATFORM: windows-amd64
       DOCKERFILE: windows
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
@@ -82,7 +82,7 @@ after_build:
       dotnet publish Rnwood.Smtp4dev -c $env:Configuration -f $env:FRAMEWORK -p:version=$env:APPVEYOR_BUILD_VERSION -o publish -p:PackAsTool=true
       dotnet pack Rnwood.Smtp4dev -c $env:Configuration -p:version=$env:APPVEYOR_BUILD_VERSION -p:PackAsTool=true
     } elseif ($env:RUNTIME -eq "docker") {
-      dotnet publish Rnwood.Smtp4dev -c $env:Configuration -f $env:DOTNETFRAMEWORK -p:version=$env:APPVEYOR_BUILD_VERSION -o publish
+      dotnet publish Rnwood.Smtp4dev -c $env:Configuration -f $env:FRAMEWORK -r $env:DOTNETRUNTIME  -p:version=$env:APPVEYOR_BUILD_VERSION -o publish
     } else {
       dotnet publish Rnwood.Smtp4dev -c $env:Configuration -f $env:FRAMEWORK -r $env:RUNTIME -p:version=$env:APPVEYOR_BUILD_VERSION -o publish
     }
