--- a/appveyor.yml
+++ b/appveyor.yml
@@ -72,7 +72,7 @@ init:
 install:
 - ps: |
    if ($env:APPVEYOR_BUILD_WORKER_IMAGE -ne "Ubuntu") { 
-      Install-Product node ''
+      cmd /c Install-Product node ''
    }
 build_script:
  - ps: |
@@ -85,7 +85,7 @@ after_build:
       dotnet publish Rnwood.Smtp4dev -c $env:CONFIGURATION  -f $env:FRAMEWORK -p:version=$env:APPVEYOR_BUILD_VERSION -o publish -p:PackAsTool=true
       dotnet pack Rnwood.Smtp4dev -c $env:CONFIGURATION  -p:version=$env:APPVEYOR_BUILD_VERSION -p:PackAsTool=true
     } elseif ($env:RUNTIME -eq "docker") {
-      dotnet publish Rnwood.Smtp4dev -c $env:CONFIGURATION  -f $env:FRAMEWORK -r $env:DOTNETRUNTIME -o publish -p:version=$env:APPVEYOR_BUILD_VERSION -o publish
+      dotnet publish Rnwood.Smtp4dev -c $env:CONFIGURATION  -f $env:FRAMEWORK -r $env:DOTNETRUNTIME -p:version=$env:APPVEYOR_BUILD_VERSION -o publish
     } else {
       dotnet publish Rnwood.Smtp4dev -c $env:CONFIGURATION  -f $env:FRAMEWORK -r $env:RUNTIME -p:version=$env:APPVEYOR_BUILD_VERSION -o publish
     }
