--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:2.2-runtime-deps AS runtime
+FROM mcr.microsoft.com/dotnet/core/runtime-deps:2.2 AS runtime
 WORKDIR /app
 EXPOSE 80
 EXPOSE 25
