--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,29 +14,29 @@ environment:
     secure: 5jWYD10eY+CLicPtEtSMng==
   FRAMEWORK: netcoreapp2.2
   matrix:
-    #- RUNTIME: noruntime
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #- RUNTIME: win-x64    
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #- RUNTIME: linux-x64
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #- RUNTIME: osx-x64
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #- RUNTIME: win-x86
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #- RUNTIME: win-arm
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #- RUNTIME: linux-arm
-    #  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: noruntime
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: win-x64    
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: linux-x64
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: osx-x64
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: win-x86
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: win-arm
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    - RUNTIME: linux-arm
+     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     - RUNTIME: docker
       DOTNETRUNTIME: linux-x64
       DOCKERPLATFORM: linux-amd64
-      DOCKERFILE: linux
+      DOCKERFILE: linux.appveyor
       APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
     - RUNTIME: docker
       DOTNETRUNTIME: win-x64
       DOCKERPLATFORM: windows-amd64
-      DOCKERFILE: windows
+      DOCKERFILE: windows.appveyor
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
 assembly_info:
   patch: true
