Avoid extra docker artifacts

--- a/Dockerfile.linux.appveyor
+++ b/Dockerfile.linux.appveyor
@@ -2,5 +2,5 @@ FROM mcr.microsoft.com/dotnet/core/runtime-deps:2.2 AS runtime
 WORKDIR /app
 EXPOSE 80
 EXPOSE 25
-COPY Rnwood.Smtp4dev/publish /app
+COPY Rnwood.Smtp4dev/docker /app
 ENTRYPOINT ["Rnwood.Smtp4dev"]
